# weak_compiler

./: .clang-tidy  CMakeLists.txt  Doxyfile  LICENSE  README.md
compiler/: CMakeLists.txt
compiler/include/FrontEnd/AST/: ASTBinaryOperator.hpp  ASTBooleanLiteral.hpp  ASTBreakStmt.hpp  ASTCompoundStmt.hpp  ASTContinueStmt.hpp  ASTDoWhileStmt.hpp  ASTFloatingPointLiteral.hpp  ASTForStmt.hpp  ASTFunctionCall.hpp  ASTFunctionDecl.hpp  ASTIfStmt.hpp  ASTIntegerLiteral.hpp  ASTNode.hpp  ASTPrettyPrint.hpp  ASTReturnStmt.hpp  ASTStringLiteral.hpp  ASTSymbol.hpp  ASTTypesEnum.hpp  ASTUnaryOperator.hpp  ASTVarDecl.hpp  ASTVisitor.hpp  ASTWhileStmt.hpp
compiler/include/FrontEnd/Analysis/: CFG.hpp  CFGBlock.hpp  CFGBuilder.hpp
compiler/include/FrontEnd/Lex/: Lexer.hpp  Token.hpp
compiler/include/FrontEnd/Parse/: Parser.hpp
compiler/include/FrontEnd/Symbols/: Storage.hpp
compiler/include/MiddleEnd/Analysis/: CFG.hpp  CFGBlock.hpp  CFGBuilder.hpp  SSABuilder.hpp  SSAForm.hpp
compiler/include/MiddleEnd/CodeGen/: CodeEmitter.hpp  CodeGen.hpp  TargetCodeBuilder.hpp  TypeResolver.hpp
compiler/include/MiddleEnd/IR/: IRAssignment.hpp  IRBranch.hpp  IRNode.hpp  IRNodePrinter.hpp  IRPhiNode.hpp  IRVisitor.hpp  Instruction.hpp  Operations.hpp  Registers.hpp  VariableSearchVisitor.hpp
compiler/include/MiddleEnd/Symbols/: Storage.hpp
compiler/include/Utility/: Diagnostic.hpp  Uncopyable.hpp  Unmovable.hpp  VariantOverload.hpp
compiler/src/: Main.cpp
compiler/src/FrontEnd/AST/: ASTBinaryOperator.cpp  ASTBooleanLiteral.cpp  ASTBreakStmt.cpp  ASTCompoundStmt.cpp  ASTContinueStmt.cpp  ASTDoWhileStmt.cpp  ASTFloatingPointLiteral.cpp  ASTForStmt.cpp  ASTFunctionCall.cpp  ASTFunctionDecl.cpp  ASTIfStmt.cpp  ASTIntegerLiteral.cpp  ASTNode.cpp  ASTPrettyPrint.cpp  ASTReturnStmt.cpp  ASTStringLiteral.cpp  ASTSymbol.cpp  ASTUnaryOperator.cpp  ASTVarDecl.cpp  ASTVisitor.cpp  ASTWhileStmt.cpp
compiler/src/FrontEnd/Analysis/: CFG.cpp  CFGBlock.cpp  CFGBuilder.cpp
compiler/src/FrontEnd/Lex/: Lexer.cpp  Token.cpp
compiler/src/FrontEnd/Parse/: Parser.cpp
compiler/src/FrontEnd/Symbols/: Storage.cpp
compiler/src/MiddleEnd/Analysis/: CFG.cpp  CFGBlock.cpp  CFGBuilder.cpp  SSABuilder.cpp  SSAForm.cpp
compiler/src/MiddleEnd/CodeGen/: CodeEmitter.cpp  CodeGen.cpp  TargetCodeBuilder.cpp  TypeResolver.cpp
compiler/src/MiddleEnd/IR/: IRAssignment.cpp  IRBranch.cpp  IRNodePrinter.cpp  IRPhiNode.cpp  Instruction.cpp  JumpInstruction.cpp  JumpLabel.cpp  OneRegInstruction.cpp  Operations.cpp  Registers.cpp  TwoRegInstruction.cpp  VariableSearchVisitor.cpp
compiler/src/MiddleEnd/Symbols/: Storage.cpp
compiler/src/Utility/: Diagnostic.cpp
doc/: codingStandards.md  draft.tex  organization.tex
docs/: ASTBinaryOperator_8cpp.html  ASTBinaryOperator_8hpp.html  ASTBinaryOperator_8hpp_source.html  ASTBooleanLiteral_8cpp.html  ASTBooleanLiteral_8hpp.html  ASTBooleanLiteral_8hpp_source.html  ASTBreakStmt_8cpp.html  ASTBreakStmt_8hpp.html  ASTBreakStmt_8hpp_source.html  ASTCompoundStmt_8cpp.html  ASTCompoundStmt_8hpp.html  ASTCompoundStmt_8hpp_source.html  ASTContinueStmt_8cpp.html  ASTContinueStmt_8hpp.html  ASTContinueStmt_8hpp_source.html  ASTDoWhileStmt_8cpp.html  ASTDoWhileStmt_8hpp.html  ASTDoWhileStmt_8hpp_source.html  ASTFloatingPointLiteral_8cpp.html  ASTFloatingPointLiteral_8hpp.html  ASTFloatingPointLiteral_8hpp_source.html  ASTForStmt_8cpp.html  ASTForStmt_8hpp.html  ASTForStmt_8hpp_source.html  ASTFunctionCall_8cpp.html  ASTFunctionCall_8hpp.html  ASTFunctionCall_8hpp_source.html  ASTFunctionDecl_8cpp.html  ASTFunctionDecl_8hpp.html  ASTFunctionDecl_8hpp_source.html  ASTIfStmt_8cpp.html  ASTIfStmt_8hpp.html  ASTIfStmt_8hpp_source.html  ASTIntegerLiteral_8cpp.html  ASTIntegerLiteral_8hpp.html  ASTIntegerLiteral_8hpp_source.html  ASTNode_8cpp.html  ASTNode_8hpp.html  ASTNode_8hpp_source.html  ASTPrettyPrint_8cpp.html  (+262 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_10.js  enumvalues_11.js  (+62 more)
draft/: codingStandards.md  draft.tex
tests/: CMakeLists.txt  TestHelpers.hpp
tests/FrontEnd/: ASTMakeFunctions.hpp  ASTPrettyPrintTest.cpp  CFGBlockTest.cpp  CFGBuilderTest.cpp  LexerTest.cpp  ParserTest.cpp  StorageTest.cpp
tests/MiddleEnd/: CFGBuilderTest.cpp  CodeGenTest.cpp  InstructionsTest.cpp  StorageTest.cpp
tests/MiddleEnd/Input/: Add.wl  Arithmetic.wl  BitOps.wl  Cmp.wl  DoWhile.wl  Factorial.wl  For.wl  If.wl  IfElse.wl  LogicalOps.wl  NestedFor.wl  RetSumOfTwoVariables.wl  While.wl
